# handlers/user/userHandler.go
@@ -11,6 +11,13 @@ import (
 type UserHandler struct {
 }
 
+type GetUserInfoConditionalReq struct {
+	UserId uint
+}
+type GetUserInfoConditionalRes struct {
+	UserId uint
+}
+
 // Auth godoc
 // @Summary      根绝条件获取用户
 // @Description  根绝条件获取用户
@@ -18,11 +25,21 @@ type UserHandler struct {
 // @Param   UserId     query    int     true        "用户id"
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  SignInRes
+// @Success      200  {object}  GetUserInfoConditionalRes
 // @Security     auth
-// @Router       /c/UserHandler/GetUserInfo [get]
-func (u *UserHandler) GetUserInfoConditional(g *gin.Context) {
+// @Router       /c/UserHandler/GetUserInfoConditional [get]
+func (u *UserHandler) GetUserInfoConditional(c *gin.Context) {
+	var r GetUserInfoConditionalReq
+	err := c.ShouldBindQuery(&r)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"msg": err.Error()})
+		return
+	}
 
+	resData := GetUserInfoConditionalRes{
+		UserId: r.UserId,
+	}
+	c.JSON(http.StatusOK, resData)
 }
 
 type GetUserInfoRes struct {
